fixing some issues

--- a/index.html
+++ b/index.html
@@ -6,38 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Frontend Mentor | Stats preview card component</title>
 </head>
 <body>
-        <div id="page">
-            <div id='info'>
-                <h1>Get <span>insights</span> that help your business grow.</h1>
-                <p id="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-                    experience, and overall efficiency.</p>
-                <div id="spans-container">
-                    <div>
-                        <h2>10k+</h2>
-                        <p>companies</p>
-                    </div>
-                    <div>
-                        <h2>314</h2>
-                        <p>templates</p>
-                    </div>
-                    <div>
-                        <h2>12M+</h2>
-                        <p>queries</p>
-                    </div>
+    <div id="page" class="page">
+        <div class='container-img'></div>
+        <div id='info' class="info">
+            <h1>Get <span>insights</span> that help your business grow.</h1>
+            <p class="main-paragraph">Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+                experience, and overall efficiency.</p>
+            <div class="spans-container">
+                <div>
+                    <h2>10k+</h2>
+                    <p>companies</p>
                 </div>
-            </div>
-            <div id='container-img'>
-                <div class="image">
-                    
+                <div>
+                    <h2>314</h2>
+                    <p>templates</p>
+                </div>
+                <div>
+                    <h2>12M+</h2>
+                    <p>queries</p>
                 </div>
             </div>
         </div>
+    </div>
     <footer>
         <div class="attribution">
             Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
